tests/baselines/reference/derivedClassSuperCallsWithThisArg.errors.txt
==== tests/cases/compiler/derivedClassSuperCallsWithThisArg.ts (2 errors) ====
    class Base {
        x: string;
        constructor(a) { }
    }
    
    class Derived extends Base {
        constructor() {
            super(this); // ok
        }
    }
    
    class Derived2 extends Base {
        constructor(public a: string) {
            super(this); // error
                  ~~~~
!!! derivedClassSuperCallsWithThisArg.ts(14,15): error TS2097: 'this' cannot be referenced in current location.
        }
    }
    
    class Derived3 extends Base {
        constructor(public a: string) {
            super(() => this); // error
                        ~~~~
!!! derivedClassSuperCallsWithThisArg.ts(20,21): error TS2097: 'this' cannot be referenced in current location.
        }
    }
    
    class Derived4 extends Base {
        constructor(public a: string) {
            super(function () { return this; }); // ok
        }
    }